# CTContrastAgentExplorer

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  node.h  nodemanager.h  nodemanagerinterface.h  organnode.hpp  plotwidget.h  series_type.h  settingswidget.h
resources/: resources.qrc
resources/data/: organs.csv
source/: organnode.cpp
src/: main.cpp  mainwindow.cpp  node.cpp  nodemanager.cpp  nodemanagerinterface.cpp  plotwidget.cpp  settingswidget.cpp
tests/: CMakeLists.txt  solvertest.cpp
translations/: CTCAExplorer_en_US.ts
